Start SF3 forms

--- a/app/config/config_dev.yml
+++ b/app/config/config_dev.yml
@@ -1,6 +1,9 @@
 imports:
     - { resource: config.yml }
 
+parameters:
+    cache_type: array
+
 framework:
     router:
         resource: "%kernel.root_dir%/config/routing_dev.yml"
@@ -10,10 +13,6 @@ framework:
 web_profiler:
     toolbar: true
     intercept_redirects: false
-
-parameters:
-    locale: en
-    cache_type: array
 
 monolog:
     handlers:
@@ -38,9 +37,9 @@ monolog:
             channels: ["doctrine"]
         # uncomment to get logging in your browser
         # you may have to allow bigger header sizes in your Web server configuration
-        #firephp:
-        #    type:   firephp
-        #    level:  info
+        firephp:
+            type:   firephp
+            level:  info
         #chromephp:
         #    type:   chromephp
         #    level:  info
