Start Sf3 Forms

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -25,7 +25,6 @@ framework:
         #assets_version: SomeVersionScheme
     default_locale:  "%locale%"
     trusted_hosts:   ~
-    trusted_proxies: ~
     session:
         # handler_id set to null will use default session handler from php.ini
         handler_id:  ~
@@ -66,6 +65,10 @@ doctrine:
 doctrine_cache:
     providers:
         my_markdown_cache:
-            type: %cache_type%
+            type: "%cache_type%"
             file_system:
-                directory: %kernel.cache_dir%/markdown_cache
+                directory: "%kernel.cache_dir%/markdown_cache"
+
+sensio_framework_extra:
+    router:
+        annotations: false
