--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -25,6 +25,7 @@ framework:
         #assets_version: SomeVersionScheme
     default_locale:  "%locale%"
     trusted_hosts:   ~
+    trusted_proxies: ~
     session:
         # handler_id set to null will use default session handler from php.ini
         handler_id:  ~
@@ -65,6 +66,6 @@ doctrine:
 doctrine_cache:
     providers:
         my_markdown_cache:
-            type: "%cache_type%"
+            type: %cache_type%
             file_system:
-                directory: "%kernel.cache_dir%/markdown_cache"
+                directory: %kernel.cache_dir%/markdown_cache
