--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -4,11 +4,13 @@ parameters:
 #    parameter_name: value
 
 services:
-    AppBundle\Service\MarkdownTransformer: ['@markdown.parser', '@doctrine_cache.providers.my_markdown_cache']
+    app.markdown_transformer:
+        class: AppBundle\Service\MarkdownTransformer
+        arguments: ['@markdown.parser', '@doctrine_cache.providers.my_markdown_cache']
 
-    AppBundle\Twig\MarkdownExtension:
+    app.markdown_extension:
+        class: AppBundle\Twig\MarkdownExtension
         tags:
             - { name: twig.extension }
+        #arguments: ['@app.markdown_transformer']
         autowire: true
-
-
