--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -11,7 +11,7 @@ parameters:
 
 framework:
     #esi:             ~
-    #translator:      { fallbacks: ["%locale%"] }
+    translator:      { fallbacks: ["%locale%"] }
     secret:          "%secret%"
     router:
         resource: "%kernel.root_dir%/config/routing.yml"
@@ -25,7 +25,6 @@ framework:
         #assets_version: SomeVersionScheme
     default_locale:  "%locale%"
     trusted_hosts:   ~
-    trusted_proxies: ~
     session:
         # handler_id set to null will use default session handler from php.ini
         handler_id:  ~
@@ -68,6 +67,6 @@ doctrine:
 doctrine_cache:
     providers:
         my_markdown_cache:
-            type: %cache_type%
+            type: "%cache_type%"
             file_system:
-                directory: %kernel.cache_dir%/markdown_cache
+                directory: "%kernel.cache_dir%/markdown_cache"
