--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -4,12 +4,10 @@ parameters:
 #    parameter_name: value
 
 services:
-    app.markdown_transformer:
-        class: AppBundle\Service\MarkdownTransformer
+    AppBundle\Service\MarkdownTransformer:
         arguments: ['@markdown.parser', '@doctrine_cache.providers.my_markdown_cache']
 
-    app.markdown_extension:
-        class: AppBundle\Twig\MarkdownExtension
+    AppBundle\Twig\MarkdownExtension:
         tags:
             - { name: twig.extension }
         #arguments: ['@app.markdown_transformer']
