--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -4,10 +4,12 @@ parameters:
 #    parameter_name: value
 
 services:
-    AppBundle\Service\MarkdownTransformer:
+    app.markdown_transformer:
+        class: AppBundle\Service\MarkdownTransformer
         arguments: ['@markdown.parser', '@doctrine_cache.providers.my_markdown_cache']
 
-    AppBundle\Twig\MarkdownExtension:
+    app.markdown_extension:
+        class: AppBundle\Twig\MarkdownExtension
         tags:
             - { name: twig.extension }
         #arguments: ['@app.markdown_transformer']
@@ -22,3 +24,19 @@ services:
         autowire: true
         tags:
             - { name: doctrine.event_subscriber }
+
+    app.form.help_form_extenion:
+        class: AppBundle\Form\TypeExtension\HelpFormExtension
+        autowire: true
+        tags:
+            - { name: form.type_extension, extended_type: Symfony\Component\Form\Extension\Core\Type\FormType }
+
+    app.encouraging_message_generator:
+        class: AppBundle\Service\MessageGenerator
+        arguments:
+            - ['You can do it!', 'Dude, sweet!', 'Woot!']
+
+    app.discouraging_message_generator:
+        class: AppBundle\Service\MessageGenerator
+        arguments:
+            - ['We are *never* going to figure this out', 'Why even try again?', 'Facepalm']
