--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -1,17 +1,16 @@
 # To get started with security, check out the documentation:
 # http://symfony.com/doc/current/book/security.html
 security:
+    encoders:
+        AppBundle\Entity\User: bcrypt
+
+    role_hierarchy:
+        ROLE_ADMIN: [ROLE_MANAGE_GENUS, ROLE_ALLOWED_TO_SWITCH]
 
     # http://symfony.com/doc/current/book/security.html#where-do-users-come-from-user-providers
     providers:
         our_users:
             entity: { class: AppBundle\Entity\User, property: email }
-
-    encoders:
-        AppBundle\Entity\User: bcrypt
-
-    role_hierarchy:
-        ROLE_ADMIN: [ROLE_MANAGE_GENUS, ROLE_HIERARCHY, ROLE_ALLOWED_TO_SWITCH]
 
     firewalls:
         # disables authentication for assets and the profiler, adapt it according to your needs
@@ -20,15 +19,13 @@ security:
             security: false
 
         main:
-            logout_on_user_change: true
             anonymous: ~
             guard:
-                authenticator:
+                authenticators:
                     - app.security.login_form_authenticator
 
             logout:
                 path: /logout
-
             switch_user: ~
             # activate different ways to authenticate
 
@@ -38,5 +35,5 @@ security:
             # form_login: ~
             # http://symfony.com/doc/current/cookbook/security/form_login_setup.html
 
-    #access_control:
-    #    - { path: ^/admin, roles: ROLE_ADMIN }
+    access_control:
+        # - { path: ^/admin, roles: ROLE_ADMIN }
