--- a/src/AppBundle/DataFixtures/ORM/fixtures.yml
+++ b/src/AppBundle/DataFixtures/ORM/fixtures.yml
@@ -6,6 +6,7 @@ AppBundle\Entity\Genus:
         funFact: <sentence()>
         isPublished: <boolean(75)>
         firstDiscoveredAt: <dateTimeBetween('-200 years', 'now')>
+        # genusScientists: '3x @user.aquanaut_*'
 
 AppBundle\Entity\GenusNote:
     genus.note_{1..100}:
@@ -22,6 +23,21 @@ AppBundle\Entity\SubFamily:
 
 AppBundle\Entity\User:
     user_{1..10}:
-        email: weaveryan+<current()>@gmail.com
-        plainPassword: 123
+        email: weaverryan+<current()>@gmail.com
+        plainPassword: iliketurtles
         roles: ['ROLE_ADMIN']
+        avatarUri: <imageUrl(100, 100, 'abstract')>
+    user.aquanaut_{1..10}:
+        email: aquanaut<current()>@example.org
+        plainPassword: aquanote
+        isScientist: true
+        firstName: <firstName()>
+        lastName: <lastName()>
+        universityName: <company()> University
+        avatarUri: <imageUrl(100, 100, 'abstract')>
+
+AppBundle\Entity\GenusScientist:
+    genus.scientist_{1..50}:
+        user: '@user.aquanaut_*'
+        genus: '@genus_*'
+        yearsStudied: <numberBetween(1, 30)>
